# StereoMaker

./: .gitignore  README.md
StereoMaker/: CMakeLists.txt  camerascanner.cpp  camerascanner.h  imagecomposer.cpp  imagecomposer.h  imagedecoder.cpp  imagedecoder.h  lumixcameracontroller.cpp  lumixcameracontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtlogging.ini
